# glaceon-google-suite-tasks

./: .flake8  .gitignore  LICENSE  README.md  TEAM.md  pyproject.toml
.circleci/: config.yml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: github-actions.yml
src/open_source_python_template/: __init__.py  crawlTasks.py  credential.json  credentials.json  extractTasks.js  token.json
src/open_source_python_template/db/: db.py  db.readme  db_config.py  readme.md
src/open_source_python_template/db/sql/: create_database.sql
src/open_source_python_template/javascripts/: script.js
src/open_source_python_template/static/: style.css
src/open_source_python_template/static/javascripts/: script.js
src/open_source_python_template/templates/: index.html
tests/: test_addition.py  test_crawl_tasks.py  test_index.py
